--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "Framework7-Keypad",
   "version": "1.0.3",
   "description": "Keypad plugin extends Framework7 with additional custom keyboards",
-  "main": "dist/",
   "repository": {
     "type": "git",
     "url": "https://github.com/nolimits4web/Framework7-Keypad.git"
   },
   "keywords": ["mobile", "framework", "ios 7", "ios7", "ios8", "ios 8", "iphone", "ipad", "apple", "phonegap", "native", "touch", "appstore", "app", "f7"],
   "author": "Vladimir Kharlampidi",
-  "license": [
-    "MIT"
-  ],
+  "license": "MIT",
+  "main": "dist/framework7.keypad.js",
   "bugs": {
     "url": "https://github.com/nolimits4web/Framework7-Keypad/issues"
   },
