--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Framework7-Keypad",
+  "name": "framework7-keypad",
   "version": "1.0.3",
   "description": "Keypad plugin extends Framework7 with additional custom keyboards",
   "repository": {
